ChangeLog:

2006-02-13 (CVS, 1.4.0-pre3):
    * added missing release notes to the spec file
    * added release notes for future-1.4.0, in pre-release state though..

2006-02-12 (CVS, 1.4.0-pre3):
    * removed bogus message from the MAX_GLTEXTURES Sys_Error
    * updated build requirements in the documentation
    * added a filename change case script. added a script for making a
      release tree from the cvs tree.
    * documented palettized (8 bit) textures option
    * updated the TODO list
    * updated the rpm spec file for future H.o.T.-1.4.0
    * updated the mkrelease script (move the spec file to the root of the tree)
    * imported JSH2Colour-1.1 sources into the utilities
    * jsh2color: coding style, whitespace / indentation clean-up. also removed
      unused light.h includes.
    * jsh2color: removed unused files.
    * jsh2color: updated the gpl license file from gnu.org
    * jsh2color: added unix-style versions of data files
    * jsh2color: added makefiles and build scripts
    * jsh2color: made the unix port:
	- several include fixes
	- moved nested externs out of functions
	- fixed type-punning gcc4 warning in LoadBSPFile
	- removed several unnecessary functions from cmdlib
	- synced cmdlib to what we did in HoT main tree:
	  strcasecmp/stricmp macros, endiannes stuff, getwd
	  fixes, etc.
	- added an ioctl fucntion Sys_kbhit as a _kbhit() replacement
	- moved the DecisionTime thing to cmdlib where it belongs.
	  added a simple _getch() replacement to it using getchar().
	- added a paranoid negative check before a sqrt() call
	- killed all unused variable warnings
	- removed several commented-out stuff
	- trying to print the map name through entity->message requires
	  line number (entity->message)-1  to be read from strings.txt,
	  therefore not worth the effort. commented it out. now printing
	  the map file name, only.
	- merged CalcFaceExtentsNoErr into CalcFaceExtents
	- removed unused macros in ltface.c