@@ -9,8 +9,8 @@
 #define	HOT_VERSION_MIN		0
 #define	HOT_VERSION_BETA	1
 #if HOT_VERSION_BETA
-#define HOT_VERSION_BETA_STR	"pre3"
-#define HOT_VERSION_BETA_DATE	"2006-02-12"
+#define HOT_VERSION_BETA_STR	"pre4"
+#define HOT_VERSION_BETA_DATE	"2006-02-23"
 #endif
 #define	HOT_VERSION_STR		STRINGIFY(HOT_VERSION_MAJ) "." STRINGIFY(HOT_VERSION_MID) "." STRINGIFY(HOT_VERSION_MIN)
 #define	GLQUAKE_VERSION		1.00
